<resources>
    <string name="app_name">NaTube</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="favourite_videos">Favourite Videos</string>
    <string name="go_back">Go Back</string>
    <string name="share">share</string>
    <string name="like">like</string>
    <string name="channel_name">Channel Name</string>
    <string name="upload_date">Upload Date</string>
    <string name="title_search">Search</string>
    <string name="title_my_video">My Video</string>
    <string name="natube">NaTube</string>
    <string name="user_name">채널 이름</string>
    <string name="user_description">DESCRIPTION</string>
    <string name="title_category">카테고리</string>
    <string name="title_keyword">키워드</string>
    <string name="setting_dialog_input_keyword">키워드를 입력하세요!</string>
    <string name="str_plus">+</string>
    <string name="homefragment_waring_text">카테코리 및 키워드를 설정하지 않으셨습니다.</string>
    <string name="homefragment_setting_btn">설정하기</string>
    <string name="category">Category</string>
    <string name="keyword">Keyword</string>
    <string name="user_description">채널 설명</string>
    <string name="complete">확인</string>
    <string name="empty_name_message">채널 이름이 비어있습니다.</string>
    <string name="verified" />
    <string name="invalid_name_message">채널 이름은 영어/한국어/숫자 만 입력 가능합니다.</string>
    <string name="empty_description_message">내 프로필 설명을 추가해 주세요</string>
</resources>