<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/activity_detail_btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/back"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/activity_detail_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_toolbar" />

    <TextView
        android:id="@+id/activity_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_thumbnail" />

    <TextView
        android:id="@+id/activity_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_title" />

    <TextView
        android:id="@+id/activity_detail_favorite_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favourite_videos"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_detail_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_favorite_video" />
    
    



</androidx.constraintlayout.widget.ConstraintLayout>