<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditChannelActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_activity_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/activity_edit_channel_natube_icon"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_natube"
                android:backgroundTint="@color/teal"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_edit_channel_natube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/natube"
                android:layout_marginStart="5dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/activity_edit_channel_natube_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_activity_edit_channel_img_background"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/img_thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_activity_detail_toolbar" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_activity_edit_channel_profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/img_empty_profile_picture"
        app:shapeAppearanceOverlay="@style/circleImageView"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_activity_detail_toolbar" />

    <TextView
        android:id="@+id/tv_activity_edit_channel_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="22sp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/iv_activity_edit_channel_profile_image" />

    <EditText
        android:id="@+id/et_activity_edit_channel_channel_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_activity_edit_channel_username"
        app:layout_constraintStart_toStartOf="@+id/tv_activity_edit_channel_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_edit_channel_username" />

    <TextView
        android:id="@+id/tv_activity_edit_channel_user_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/user_description"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/et_activity_edit_channel_channel_name"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/et_activity_edit_channel_channel_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_activity_edit_channel_username"
        app:layout_constraintStart_toStartOf="@+id/tv_activity_edit_channel_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_edit_channel_user_description" />


</androidx.constraintlayout.widget.ConstraintLayout>