<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.myvideo.MyVideoFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_activity_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/background_rounded_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/ibtn_fragment_my_video_edit"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/teal"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_editing"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:tint="@color/white" />

            <ImageView
                android:id="@+id/activity_edit_channel_natube_icon"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/teal"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_natube"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/activity_edit_channel_natube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/natube"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/activity_edit_channel_natube_icon"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_fragment_my_video_img_background"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_pretty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_activity_detail_toolbar" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_fragment_my_video_profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_empty_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_activity_detail_toolbar"
        app:shapeAppearanceOverlay="@style/circleImageView" />

    <TextView
        android:id="@+id/tv_activity_edit_channel_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/user_name"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_fragment_my_video_profile_image" />

    <ScrollView
        android:id="@+id/sv_my_video"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_activity_edit_channel_username">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_activity_edit_channel_user_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/user_description"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_fragment_my_video_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/favourite_videos"
                android:textSize="22sp"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="@+id/tv_activity_edit_channel_user_description"
                app:layout_constraintTop_toBottomOf="@+id/tv_activity_edit_channel_user_description" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_empty_favorite_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                android:visibility="gone">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lav_empty_favorite_list"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/animation_empty_like_list" />

                <TextView
                    android:id="@+id/tv_empty_favorite_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="좋아하시는 비디오가 없습니다"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/lav_empty_favorite_list"
                    app:layout_constraintStart_toStartOf="@+id/lav_empty_favorite_list"
                    app:layout_constraintTop_toBottomOf="@+id/lav_empty_favorite_list" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_fragment_my_video_favourites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_fragment_my_video_favorites"
                tools:listitem="@layout/video_item">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>